--- a/index.css
+++ b/index.css
@@ -9,9 +9,24 @@
     @apply px-6 py-4;
 }
 
-#btn-prev-page,
-#btn-next-page {
-    @apply relative inline-flex items-center px-2 py-2 rounded border border-gray-300 bg-white text-sm font-medium text-gray-500 hover:bg-gray-50;
+.pagination {
+    @apply px-4 py-3 flex items-center justify-center;
+}
+
+.pagination .btn-pagi i {
+    @apply text-gray-500;
+}
+
+.pagination .btn-pagi,
+.pagination select {
+    @apply px-4 py-2;
+}
+
+.pagination .btn-pagi {
+    @apply text-black bg-white hover:bg-slate-200;
+}
+
+.pagination i {
 }
 
 #modal-blog input {
