--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@
     @apply h-10 border mt-1 rounded px-4 w-full bg-gray-50;
 }
 #modal-blog button {
-    @apply inline-flex w-full justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm inline-flex w-full justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm;
+    @apply inline-flex w-full justify-center rounded-md px-3 py-2 text-sm font-semibold shadow-sm;
 }
 
 .table-text {
