--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
 
 .pagination .btn-pagi,
 .pagination select {
-    @apply px-4 py-2;
+    @apply px-4 py-2 rounded;
 }
 
 .pagination .btn-pagi {
